syntax = "proto3";

option csharp_namespace = "GrpcService";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
    rpc GetById (GetUserById) returns (ReturnUserById);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}
message GetUserById {
int32 id = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}
message ReturnUserById {
  string message = 1;
}
